# S-H-Proj

./: CMakeLists.txt  PrintTemplate  SPArrayList.c  SPArrayList.h  SPFIARGame.h  SPFIARParser.c  SPFIARParser.h  SPGame.c  SPGame.h  SPGameFlow.c  SPGameFlow.h  SPMainAux.c  SPMainAux.h  SPMiniMax.c  SPMiniMax.h  SPMiniMaxNode.c  SPMiniMaxNode.h  SPMoves.c  SPMoves.h  SPParser.c  SPParser.h  SPQueue.c  SPQueue.h  SPSettings.c  SPSettings.h  main.c  makefile  partners.txt  test.xml
GUI/: SPGUIBasics.c  SPGUIBasics.h  SPGUIButton.c  SPGUIButton.h  SPGUICommon.c  SPGUICommon.h  SPGUIController.c  SPGUIController.h  SPGUIGameWindow.c  SPGUIGameWindow.h  SPGUILoadWindow.c  SPGUILoadWindow.h  SPGUIMainWindow.c  SPGUIMainWindow.h  SPGUIManager.c  SPGUIManager.h  SPGUISetWindow.c  SPGUISetWindow.h  SPGUISettingsWindow.c  SPGUISettingsWindow.h
GUI/saved_games/: save1.xml  save2.xml  save3.xml  save4.xml  save5.xml
Graphics/: SPCHESSGUIButton.h  SPCHESSGUICommon.h  SPCHESSGUIGameWin.c  SPCHESSGUIGameWin.h  SPCHESSGUILoadWin.c  SPCHESSGUILoadWin.h  SPCHESSGUIManager.h  SPCHESSGUISetWin.c  SPCHESSGUISetWin.h  guimode.c
