cmake_minimum_required(VERSION 3.8)
project(untitled1)

set(SDL2_INCLUDE_DIR C:/SDL2-2.0.5/x86_64-w64-mingw32/include/SDL2)
include_directories(${SDL2_INCLUDE_DIR})

set(prefix "C:/MinGW/x86_64-w64-mingw32")
set(exec_prefix "${prefix}")
set(libdir "${exec_prefix}/lib")
set(SDL2_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_EXEC_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_LIBDIR "${exec_prefix}/lib")
set(SDL2_INCLUDE_DIRS "${prefix}/include/SDL2")

add_library(SDL2 STATIC IMPORTED)
set_property(TARGET SDL2 PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2.a)
add_library(SDL2main STATIC IMPORTED)
set_property(TARGET SDL2main PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2main.a)


set(SDL2_LIBRARIES "-L${SDL2_LIBDIR} -lmingw32")
string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)


configure_file(Graphics/images/select_color.bmp Graphics/images/select_color.bmp COPYONLY)
configure_file(Graphics/images/inactive_expert.bmp Graphics/images/inactive_expert.bmp COPYONLY)
configure_file(Graphics/images/inactive_easy.bmp Graphics/images/inactive_easy.bmp COPYONLY)
configure_file(Graphics/images/inactive_back.bmp Graphics/images/inactive_back.bmp COPYONLY)
configure_file(Graphics/images/inactive_hard.bmp Graphics/images/inactive_hard.bmp COPYONLY)
configure_file(Graphics/images/white_knight.bmp Graphics/images/white_knight.bmp COPYONLY)
configure_file(Graphics/images/inactive_slot3.bmp Graphics/images/inactive_slot3.bmp COPYONLY)
configure_file(Graphics/images/inactive_two_players.bmp Graphics/images/inactive_two_players.bmp COPYONLY)
configure_file(Graphics/images/chess_grid.bmp Graphics/images/chess_grid.bmp COPYONLY)
configure_file(Graphics/images/one_player.bmp Graphics/images/one_player.bmp COPYONLY)
configure_file(Graphics/images/save.bmp Graphics/images/save.bmp COPYONLY)
configure_file(Graphics/images/inactive_new_game.bmp Graphics/images/inactive_new_game.bmp COPYONLY)
configure_file(Graphics/images/expert.bmp Graphics/images/expert.bmp COPYONLY)
configure_file(Graphics/images/undo.bmp Graphics/images/undo.bmp COPYONLY)
configure_file(Graphics/images/black_king.bmp Graphics/images/black_king.bmp COPYONLY)
configure_file(Graphics/images/hard.bmp Graphics/images/hard.bmp COPYONLY)
configure_file(Graphics/images/slot1.bmp Graphics/images/slot1.bmp COPYONLY)
configure_file(Graphics/images/black_pawn.bmp Graphics/images/black_pawn.bmp COPYONLY)
configure_file(Graphics/images/inactive_start.bmp Graphics/images/inactive_start.bmp COPYONLY)
configure_file(Graphics/images/black_player.bmp Graphics/images/black_player.bmp COPYONLY)
configure_file(Graphics/images/inactive_one_player.bmp Graphics/images/inactive_one_player.bmp COPYONLY)
configure_file(Graphics/images/main_menu.bmp Graphics/images/main_menu.bmp COPYONLY)
configure_file(Graphics/images/inactive_slot1.bmp Graphics/images/inactive_slot1.bmp COPYONLY)
configure_file(Graphics/images/white_pawn.bmp Graphics/images/white_pawn.bmp COPYONLY)
configure_file(Graphics/images/difficulty.bmp Graphics/images/difficulty.bmp COPYONLY)
configure_file(Graphics/images/new_game.bmp Graphics/images/new_game.bmp COPYONLY)
configure_file(Graphics/images/inactive_white_player.bmp Graphics/images/inactive_white_player.bmp COPYONLY)
configure_file(Graphics/images/inactive_load.bmp Graphics/images/inactive_load.bmp COPYONLY)
configure_file(Graphics/images/black_queen.bmp Graphics/images/black_queen.bmp COPYONLY)
configure_file(Graphics/images/slot3.bmp Graphics/images/slot3.bmp COPYONLY)
configure_file(Graphics/images/white_player.bmp Graphics/images/white_player.bmp COPYONLY)
configure_file(Graphics/images/moderate.bmp Graphics/images/moderate.bmp COPYONLY)
configure_file(Graphics/images/inactive_black_player.bmp Graphics/images/inactive_black_player.bmp COPYONLY)
configure_file(Graphics/images/white_rook.bmp Graphics/images/white_rook.bmp COPYONLY)
configure_file(Graphics/images/inactive_slot4.bmp Graphics/images/inactive_slot4.bmp COPYONLY)
configure_file(Graphics/images/start.bmp Graphics/images/start.bmp COPYONLY)
configure_file(Graphics/images/load.bmp Graphics/images/load.bmp COPYONLY)
configure_file(Graphics/images/inactive_noob.bmp Graphics/images/inactive_noob.bmp COPYONLY)
configure_file(Graphics/images/inactive_slot2.bmp Graphics/images/inactive_slot2.bmp COPYONLY)
configure_file(Graphics/images/inactive_moderate.bmp Graphics/images/inactive_moderate.bmp COPYONLY)
configure_file(Graphics/images/white_bishop.bmp Graphics/images/white_bishop.bmp COPYONLY)
configure_file(Graphics/images/inactive_main_menu.bmp Graphics/images/inactive_main_menu.bmp COPYONLY)
configure_file(Graphics/images/white_queen.bmp Graphics/images/white_queen.bmp COPYONLY)
configure_file(Graphics/images/back.bmp Graphics/images/back.bmp COPYONLY)
configure_file(Graphics/images/inactive_exit.bmp Graphics/images/inactive_exit.bmp COPYONLY)
configure_file(Graphics/images/black_bishop.bmp Graphics/images/black_bishop.bmp COPYONLY)
configure_file(Graphics/images/two_players.bmp Graphics/images/two_players.bmp COPYONLY)
configure_file(Graphics/images/exit.bmp Graphics/images/exit.bmp COPYONLY)
configure_file(Graphics/images/black_rook.bmp Graphics/images/black_rook.bmp COPYONLY)
configure_file(Graphics/images/slot4.bmp Graphics/images/slot4.bmp COPYONLY)
configure_file(Graphics/images/black_knight.bmp Graphics/images/black_knight.bmp COPYONLY)
configure_file(Graphics/images/game_mode.bmp Graphics/images/game_mode.bmp COPYONLY)
configure_file(Graphics/images/restart.bmp Graphics/images/restart.bmp COPYONLY)
configure_file(Graphics/images/inactive_undo.bmp Graphics/images/inactive_undo.bmp COPYONLY)
configure_file(Graphics/images/slot0.bmp Graphics/images/slot0.bmp COPYONLY)
configure_file(Graphics/images/inactive_save.bmp Graphics/images/inactive_save.bmp COPYONLY)
configure_file(Graphics/images/easy.bmp Graphics/images/easy.bmp COPYONLY)
configure_file(Graphics/images/slot2.bmp Graphics/images/slot2.bmp COPYONLY)
configure_file(Graphics/images/inactive_slot0.bmp Graphics/images/inactive_slot0.bmp COPYONLY)
configure_file(Graphics/images/white_king.bmp Graphics/images/white_king.bmp COPYONLY)
configure_file(Graphics/images/noob.bmp Graphics/images/noob.bmp COPYONLY)

set(CMAKE_C_STANDARD 99)
set(gcc Wall Werror Wextra pedantic-errors)
set(SOURCE_FILES main.c SPGame.c SPMiniMax.c SPParser.c SPSettings.c SPQueue.c SPMoves.h SPMoves.c
        Graphics/guimode.c Graphics/SPCHESSGUIButton.c Graphics/SPCHESSGUICommon.c Graphics/SPCHESSGUIGameWin.c Graphics/SPCHESSGUILoadWin.c
        Graphics/SPCHESSGUIMainWin.c Graphics/SPCHESSGUIManager.c Graphics/SPCHESSGUISetWin.c
        )
add_executable(untitled1 ${SOURCE_FILES})
target_link_libraries(untitled1 ${SDL2_LIBRARIES} SDL2main SDL2 -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -static-libgcc)
