cmake_minimum_required(VERSION 3.8)
project(untitled1)

set(SDL2_INCLUDE_DIR C:/SDL2-2.0.5/x86_64-w64-mingw32/include/SDL2)
include_directories(${SDL2_INCLUDE_DIR})

set(prefix "C:/MinGW/x86_64-w64-mingw32")
set(exec_prefix "${prefix}")
set(libdir "${exec_prefix}/lib")
set(SDL2_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_EXEC_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_LIBDIR "${exec_prefix}/lib")
set(SDL2_INCLUDE_DIRS "${prefix}/include/SDL2")

add_library(SDL2 STATIC IMPORTED)
set_property(TARGET SDL2 PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2.a)
add_library(SDL2main STATIC IMPORTED)
set_property(TARGET SDL2main PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2main.a)


set(SDL2_LIBRARIES "-L${SDL2_LIBDIR} -lmingw32")
string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)


configure_file(GUI/images/select_color.bmp GUI/images/select_color.bmp COPYONLY)
configure_file(GUI/images/inactive_expert.bmp GUI/images/inactive_expert.bmp COPYONLY)
configure_file(GUI/images/inactive_easy.bmp GUI/images/inactive_easy.bmp COPYONLY)
configure_file(GUI/images/inactive_back.bmp GUI/images/inactive_back.bmp COPYONLY)
configure_file(GUI/images/inactive_hard.bmp GUI/images/inactive_hard.bmp COPYONLY)
configure_file(GUI/images/white_knight.bmp GUI/images/white_knight.bmp COPYONLY)
configure_file(GUI/images/inactive_slot3.bmp GUI/images/inactive_slot3.bmp COPYONLY)
configure_file(GUI/images/inactive_two_players.bmp GUI/images/inactive_two_players.bmp COPYONLY)
configure_file(GUI/images/chess_grid.bmp GUI/images/chess_grid.bmp COPYONLY)
configure_file(GUI/images/one_player.bmp GUI/images/one_player.bmp COPYONLY)
configure_file(GUI/images/save.bmp GUI/images/save.bmp COPYONLY)
configure_file(GUI/images/inactive_new_game.bmp GUI/images/inactive_new_game.bmp COPYONLY)
configure_file(GUI/images/expert.bmp GUI/images/expert.bmp COPYONLY)
configure_file(GUI/images/undo.bmp GUI/images/undo.bmp COPYONLY)
configure_file(GUI/images/black_king.bmp GUI/images/black_king.bmp COPYONLY)
configure_file(GUI/images/hard.bmp GUI/images/hard.bmp COPYONLY)
configure_file(GUI/images/slot1.bmp GUI/images/slot1.bmp COPYONLY)
configure_file(GUI/images/black_pawn.bmp GUI/images/black_pawn.bmp COPYONLY)
configure_file(GUI/images/inactive_start.bmp GUI/images/inactive_start.bmp COPYONLY)
configure_file(GUI/images/black_player.bmp GUI/images/black_player.bmp COPYONLY)
configure_file(GUI/images/inactive_one_player.bmp GUI/images/inactive_one_player.bmp COPYONLY)
configure_file(GUI/images/main_menu.bmp GUI/images/main_menu.bmp COPYONLY)
configure_file(GUI/images/inactive_slot1.bmp GUI/images/inactive_slot1.bmp COPYONLY)
configure_file(GUI/images/white_pawn.bmp GUI/images/white_pawn.bmp COPYONLY)
configure_file(GUI/images/difficulty.bmp GUI/images/difficulty.bmp COPYONLY)
configure_file(GUI/images/new_game.bmp GUI/images/new_game.bmp COPYONLY)
configure_file(GUI/images/inactive_white_player.bmp GUI/images/inactive_white_player.bmp COPYONLY)
configure_file(GUI/images/inactive_load.bmp GUI/images/inactive_load.bmp COPYONLY)
configure_file(GUI/images/black_queen.bmp GUI/images/black_queen.bmp COPYONLY)
configure_file(GUI/images/slot3.bmp GUI/images/slot3.bmp COPYONLY)
configure_file(GUI/images/white_player.bmp GUI/images/white_player.bmp COPYONLY)
configure_file(GUI/images/moderate.bmp GUI/images/moderate.bmp COPYONLY)
configure_file(GUI/images/inactive_black_player.bmp GUI/images/inactive_black_player.bmp COPYONLY)
configure_file(GUI/images/white_rook.bmp GUI/images/white_rook.bmp COPYONLY)
configure_file(GUI/images/inactive_slot4.bmp GUI/images/inactive_slot4.bmp COPYONLY)
configure_file(GUI/images/start.bmp GUI/images/start.bmp COPYONLY)
configure_file(GUI/images/load.bmp GUI/images/load.bmp COPYONLY)
configure_file(GUI/images/inactive_noob.bmp GUI/images/inactive_noob.bmp COPYONLY)
configure_file(GUI/images/inactive_slot2.bmp GUI/images/inactive_slot2.bmp COPYONLY)
configure_file(GUI/images/inactive_moderate.bmp GUI/images/inactive_moderate.bmp COPYONLY)
configure_file(GUI/images/white_bishop.bmp GUI/images/white_bishop.bmp COPYONLY)
configure_file(GUI/images/inactive_main_menu.bmp GUI/images/inactive_main_menu.bmp COPYONLY)
configure_file(GUI/images/white_queen.bmp GUI/images/white_queen.bmp COPYONLY)
configure_file(GUI/images/back.bmp GUI/images/back.bmp COPYONLY)
configure_file(GUI/images/inactive_exit.bmp GUI/images/inactive_exit.bmp COPYONLY)
configure_file(GUI/images/black_bishop.bmp GUI/images/black_bishop.bmp COPYONLY)
configure_file(GUI/images/two_players.bmp GUI/images/two_players.bmp COPYONLY)
configure_file(GUI/images/exit.bmp GUI/images/exit.bmp COPYONLY)
configure_file(GUI/images/black_rook.bmp GUI/images/black_rook.bmp COPYONLY)
configure_file(GUI/images/slot4.bmp GUI/images/slot4.bmp COPYONLY)
configure_file(GUI/images/black_knight.bmp GUI/images/black_knight.bmp COPYONLY)
configure_file(GUI/images/game_mode.bmp GUI/images/game_mode.bmp COPYONLY)
configure_file(GUI/images/restart.bmp GUI/images/restart.bmp COPYONLY)
configure_file(GUI/images/inactive_undo.bmp GUI/images/inactive_undo.bmp COPYONLY)
configure_file(GUI/images/slot0.bmp GUI/images/slot0.bmp COPYONLY)
configure_file(GUI/images/inactive_save.bmp GUI/images/inactive_save.bmp COPYONLY)
configure_file(GUI/images/easy.bmp GUI/images/easy.bmp COPYONLY)
configure_file(GUI/images/slot2.bmp GUI/images/slot2.bmp COPYONLY)
configure_file(GUI/images/inactive_slot0.bmp GUI/images/inactive_slot0.bmp COPYONLY)
configure_file(GUI/images/white_king.bmp GUI/images/white_king.bmp COPYONLY)
configure_file(GUI/images/noob.bmp GUI/images/noob.bmp COPYONLY)

set(CMAKE_C_STANDARD 99)
set(gcc Wall Werror Wextra pedantic-errors)
set(SOURCE_FILES main.c SPGame.c SPMiniMax.c SPParser.c SPSettings.c SPQueue.c SPMoves.h SPMoves.c
        GUI/SPGUIButton.c GUI/SPGUICommon.c GUI/SPGUIGameWindow.c GUI/SPGUILoadWindow.c
        GUI/SPGUIMainWindow.c GUI/SPGUIManager.c GUI/SPGUISetWindow.c
        GUI/SPGUIEventHandler.h)
add_executable(untitled1 ${SOURCE_FILES})
target_link_libraries(untitled1 ${SDL2_LIBRARIES} SDL2main SDL2 -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -static-libgcc)
