cmake_minimum_required(VERSION 3.8)
project(untitled1)

set(SDL2_INCLUDE_DIR C:/SDL2-2.0.5/x86_64-w64-mingw32/include/SDL2)
include_directories(${SDL2_INCLUDE_DIR})

set(prefix "C:/MinGW/x86_64-w64-mingw32")
set(exec_prefix "${prefix}")
set(libdir "${exec_prefix}/lib")
set(SDL2_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_EXEC_PREFIX "C:/SDL2-2.0.5/x86_64-w64-mingw32")
set(SDL2_LIBDIR "${exec_prefix}/lib")
set(SDL2_INCLUDE_DIRS "${prefix}/include/SDL2")

add_library(SDL2 STATIC IMPORTED)
set_property(TARGET SDL2 PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2.a)
add_library(SDL2main STATIC IMPORTED)
set_property(TARGET SDL2main PROPERTY IMPORTED_LOCATION C:/SDL2-2.0.5/x86_64-w64-mingw32/lib/libSDL2main.a)

set(SDL2_LIBRARIES "-L${SDL2_LIBDIR} -lmingw32")
string(STRIP "${SDL2_LIBRARIES}" SDL2_LIBRARIES)

configure_file(GUI/images/button_select_color.bmp GUI/images/button_select_color.bmp COPYONLY)
configure_file(GUI/images/button_expert_F.bmp GUI/images/button_expert_F.bmp COPYONLY)
configure_file(GUI/images/button_easy_F.bmp GUI/images/button_easy_F.bmp COPYONLY)
configure_file(GUI/images/button_back_F.bmp GUI/images/button_back_F.bmp COPYONLY)
configure_file(GUI/images/button_hard_F.bmp GUI/images/button_hard_F.bmp COPYONLY)
configure_file(GUI/images/button_white_knight.bmp GUI/images/button_white_knight.bmp COPYONLY)
configure_file(GUI/images/button_slot3_F.bmp GUI/images/button_slot3_F.bmp COPYONLY)
configure_file(GUI/images/button_two_players_F.bmp GUI/images/button_two_players_F.bmp COPYONLY)
configure_file(GUI/images/button_chess_grid.bmp GUI/images/button_chess_grid.bmp COPYONLY)
configure_file(GUI/images/button_one_player.bmp GUI/images/button_one_player.bmp COPYONLY)
configure_file(GUI/images/button_save.bmp GUI/images/button_save.bmp COPYONLY)
configure_file(GUI/images/button_new_game_F.bmp GUI/images/button_new_game_F.bmp COPYONLY)
configure_file(GUI/images/button_expert.bmp GUI/images/button_expert.bmp COPYONLY)
configure_file(GUI/images/button_undo.bmp GUI/images/button_undo.bmp COPYONLY)
configure_file(GUI/images/button_black_king.bmp GUI/images/button_black_king.bmp COPYONLY)
configure_file(GUI/images/button_hard.bmp GUI/images/button_hard.bmp COPYONLY)
configure_file(GUI/images/button_slot1.bmp GUI/images/button_slot1.bmp COPYONLY)
configure_file(GUI/images/button_black_pawn.bmp GUI/images/button_black_pawn.bmp COPYONLY)
configure_file(GUI/images/button_start_F.bmp GUI/images/button_start_F.bmp COPYONLY)
configure_file(GUI/images/button_black_player.bmp GUI/images/button_black_player.bmp COPYONLY)
configure_file(GUI/images/button_one_player_F.bmp GUI/images/button_one_player_F.bmp COPYONLY)
configure_file(GUI/images/button_main_menu.bmp GUI/images/button_main_menu.bmp COPYONLY)
configure_file(GUI/images/button_slot1_F.bmp GUI/images/button_slot1_F.bmp COPYONLY)
configure_file(GUI/images/button_white_pawn.bmp GUI/images/button_white_pawn.bmp COPYONLY)
configure_file(GUI/images/button_difficulty.bmp GUI/images/button_difficulty.bmp COPYONLY)
configure_file(GUI/images/button_new_game.bmp GUI/images/button_new_game.bmp COPYONLY)
configure_file(GUI/images/button_white_player_F.bmp GUI/images/button_white_player_F.bmp COPYONLY)
configure_file(GUI/images/button_load_F.bmp GUI/images/button_load_F.bmp COPYONLY)
configure_file(GUI/images/button_black_queen.bmp GUI/images/button_black_queen.bmp COPYONLY)
configure_file(GUI/images/button_slot3.bmp GUI/images/button_slot3.bmp COPYONLY)
configure_file(GUI/images/button_white_player.bmp GUI/images/button_white_player.bmp COPYONLY)
configure_file(GUI/images/button_moderate.bmp GUI/images/button_moderate.bmp COPYONLY)
configure_file(GUI/images/button_black_player_F.bmp GUI/images/button_black_player_F.bmp COPYONLY)
configure_file(GUI/images/button_white_rook.bmp GUI/images/button_white_rook.bmp COPYONLY)
configure_file(GUI/images/button_slot4_F.bmp GUI/images/button_slot4_F.bmp COPYONLY)
configure_file(GUI/images/button_start.bmp GUI/images/button_start.bmp COPYONLY)
configure_file(GUI/images/button_load.bmp GUI/images/button_load.bmp COPYONLY)
configure_file(GUI/images/button_noob_F.bmp GUI/images/button_noob_F.bmp COPYONLY)
configure_file(GUI/images/button_slot2_F.bmp GUI/images/button_slot2_F.bmp COPYONLY)
configure_file(GUI/images/button_moderate_F.bmp GUI/images/button_moderate_F.bmp COPYONLY)
configure_file(GUI/images/button_white_bishop.bmp GUI/images/button_white_bishop.bmp COPYONLY)
configure_file(GUI/images/button_main_menu_F.bmp GUI/images/button_main_menu_F.bmp COPYONLY)
configure_file(GUI/images/button_white_queen.bmp GUI/images/button_white_queen.bmp COPYONLY)
configure_file(GUI/images/button_back.bmp GUI/images/button_back.bmp COPYONLY)
configure_file(GUI/images/button_exit_F.bmp GUI/images/button_exit_F.bmp COPYONLY)
configure_file(GUI/images/button_black_bishop.bmp GUI/images/button_black_bishop.bmp COPYONLY)
configure_file(GUI/images/button_two_players.bmp GUI/images/button_two_players.bmp COPYONLY)
configure_file(GUI/images/button_exit.bmp GUI/images/button_.bmp COPYONLY)
configure_file(GUI/images/button_black_rook.bmp GUI/images/button_black_rook.bmp COPYONLY)
configure_file(GUI/images/button_slot4.bmp GUI/images/button_slot4.bmp COPYONLY)
configure_file(GUI/images/button_black_knight.bmp GUI/images/button_black_knight.bmp COPYONLY)
configure_file(GUI/images/button_game_mode.bmp GUI/images/button_game_mode.bmp COPYONLY)
configure_file(GUI/images/button_restart.bmp GUI/images/button_restart.bmp COPYONLY)
configure_file(GUI/images/button_undo_F.bmp GUI/images/button_undo_F.bmp COPYONLY)
configure_file(GUI/images/button_slot0.bmp GUI/images/button_slot0.bmp COPYONLY)
configure_file(GUI/images/button_save_F.bmp GUI/images/button_save_F.bmp COPYONLY)
configure_file(GUI/images/button_easy.bmp GUI/images/button_easy.bmp COPYONLY)
configure_file(GUI/images/button_slot2.bmp GUI/images/button_slot2.bmp COPYONLY)
configure_file(GUI/images/button_slot0_F.bmp GUI/images/button_slot0_F.bmp COPYONLY)
configure_file(GUI/images/button_white_king.bmp GUI/images/button_white_king.bmp COPYONLY)
configure_file(GUI/images/button_noob.bmp GUI/images/button_noob.bmp COPYONLY)

set(CMAKE_C_STANDARD 99)
set(gcc Wall Werror Wextra pedantic-errors)
set(SOURCE_FILES main.c SPGame.c SPMiniMax.c SPParser.c SPSettings.c SPQueue.c SPMoves.h SPMoves.c
        GUI/SPGUIBasics.c GUI/SPGUIGameWindow.c GUI/SPGUILoadWindow.c
        GUI/SPGUIMainWindow.c GUI/SPGUIController.c GUI/SPGUISettingsWindow.c)
add_executable(untitled1 ${SOURCE_FILES})
target_link_libraries(untitled1 ${SDL2_LIBRARIES} SDL2main SDL2 -lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 -lole32 -loleaut32 -lshell32 -lversion -luuid -static-libgcc)
